--- a/check-ascending-order/package.json
+++ b/check-ascending-order/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mocha": "^5.2.0"
+    "mocha": "^5.2.0",
+    "npm": "^6.1.0"
   }
 }
